test/files/neg/macro-invalidusage-expands-to-apply-d.check
Macros_Test_2.scala:7: error: class C needs to be a trait to be mixed in
  class D extends AnyRef with Foo(2)
                              ^
one error found
